--- a/src/gui_icons.qrc
+++ b/src/gui_icons.qrc
@@ -1,7 +1,8 @@
 <RCC>
-  <qresource prefix="/images" >
-    <file>images/browse.png</file>
-    <file>images/reload.png</file>
-    <file>images/Win32DiskImager.png</file>
-  </qresource>
+    <qresource prefix="/images">
+        <file>images/browse.png</file>
+        <file>images/reload.png</file>
+        <file>images/Win32DiskImager.png</file>
+        <file>images/search.png</file>
+    </qresource>
 </RCC>
